tests/ucc/type/bad/typedef-vs-struct-vs-int.c
typedef struct a
{
    int a;
} my_struct;

int main(void)
{
    my_struct a = 1;

    return 0;
}
